--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ body{
     font-style: normal;
     min-height: 100vh;
     background-color:rgba(32, 131, 217, 0.666);
-    background-image: url("/InstrumentDJ/images/club.jpg");
+    background-image: url("../InstrumentDJ/images/club.jpg");
 
     background-repeat: no-repeat;
     background-size: cover;
@@ -107,7 +107,7 @@ body{
 
 .desk{
     
-    background-image: url("/InstrumentDJ/images/desk1.jpg");
+    background-image: url("../InstrumentDJ/images/desk1.jpg");
 
     background-size: cover;
     background-position: center;
