--- a/css/style.css
+++ b/css/style.css
@@ -15,9 +15,7 @@ body{
     font-style: normal;
     min-height: 100vh;
     background-color:rgba(32, 131, 217, 0.666);
-    background-image: url("/images/club.jpg");
-
-
+    background-image: url("images/club.jpg");
 
     background-repeat: no-repeat;
     background-size: cover;
@@ -109,7 +107,8 @@ body{
 
 .desk{
     
-    background-image: url("/images/desk1.jpg");
+    background-image: url("images/desk1.jpg");
+
 
 
 
