--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ body{
     font-style: normal;
     min-height: 100vh;
     background-color:rgba(32, 131, 217, 0.666);
-    background-image: url("./images/club.jpg");
+    background-image: url("../images/club.jpg");
 
 
     background-repeat: no-repeat;
@@ -108,7 +108,7 @@ body{
 
 .desk{
     
-    background-image: url("./images/desk1.jpg");
+    background-image: url("../images/desk1.jpg");
 
 
 
